# coding-challenges

./: .gitignore  README.md
companies/google/: compression-decompression.py  longest_word.py  minesweeper.py
cplusplus/: count_and_say  count_and_say.cpp  helloworld  helloworld.cpp  maximum_subarray  maximum_subarray.cpp
cplusplus/sample-header/: sample-function.cpp  sample-header.cpp  sample-header.h
intuitive-surgical/systemstestengineertechnicalassignment/: compare_sensors.py
javascript/uw-medicine/: UW-supplemental qns.pages  uw-supplemental-qns.txt
python/: 725-split-linked-lists-in-parts.py  Is_balanced.py  Search_Insertion_Position.py  add_binary.py  climbing_stairs.py  knapsack.py  length_of_last_word.py  level_order_bottom.py  low-pass-filter2.py  max_depth.py  max_profit.py  pascal_triangle.py  pascal_triangle2.py  path_sum.py  plus_one.py  sorted_array_to_BST.py  sqrt.py  symmetric_tree.py  taxicab_problem.py
python/cluster/: kmeans-generalized.py  kmeans.py
python/interview/brain-corp/: find_phone.py  pyproject.toml  readme.md  train_phone_finder.py  train_phone_finder_orb.py  train_phone_finder_templateMatch.py
python/leetcode/: 0003-longest-substring-without-repeating-characters.py  0062-unique-paths.py  0092-reverse-linked-list-II.py  0121-best-time-to-buy-and-sell-stock.py  0141-linked-list-cycle.py  0506-relative-rank.py  0725-split-linked-lists-in-parts.py  1-two-sum.py  104-max-depth-binary-tree.py  108-binary-search-tree.py  125-valid-palindrome.py  (+39 more)
sorting_algorithms/: bubble_sort.py  insertion_sort.py  selection_sort.py
(+27 files in other folders)
